second and final

--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@
                 <div class="row">
                     <div class="col-xl-12">
                         <div class="hero-cap hero-cap2 pt-70">
-                            <h2>Contact me</h2>
+                            <h2 data-aos="fade-up">Contact me</h2>
                         </div>
                     </div>
                 </div>
@@ -126,7 +126,7 @@
                     </form>
                 </div>
                 <div class="col-lg-3 offset-lg-1">
-                    <a href="https://api.whatsapp.com/send?phone=+919649215564&text=Hi, I want to Connect with you regarding Personal Training, please contact with me as soon as possible"
+                    <a href="https://api.whatsapp.com/send?phone=+919649215564&text=Hi, I'm interested in personal training services. Could you please get in touch when you have a moment to discuss the details?"
                         class="media contact-info">
                         <span class="contact-info__icon"><i class="fa-brands fa-whatsapp"></i></span>
                         <div class="media-body">
@@ -141,10 +141,10 @@
                             <p>Mon to Fri 9am to 6pm</p>
                         </div>
                     </a>
-                    <a href="mailto:support@colorlib.com" class="media contact-info">
+                    <a href="mailto:vishalsakarwal9649@gmail.com" class="media contact-info">
                         <span class="contact-info__icon"><i class="fa-regular fa-envelope"></i></span>
                         <div class="media-body">
-                            <h3>support@colorlib.com</h3>
+                            <h3>vishalsakarwal9649@gmail.com</h3>
                             <p>Send us your query anytime!</p>
                         </div>
                     </a>
