--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/fontawesome-all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body class="black-bg">
@@ -76,7 +77,7 @@
                                 <div class="hero__caption">
                                     <span data-animation="fadeInLeft" data-delay="0.1s">Hi This is Vishal</span>
                                     <h1 data-animation="fadeInLeft" data-delay="0.4s">Gym Trainer</h1>
-                                    <a href="courses.html" class="border-btn hero-btn" data-animation="fadeInLeft"
+                                    <a href="contact.html" class="border-btn hero-btn" data-animation="fadeInLeft"
                                         data-delay="0.8s">Contact me</a>
                                 </div>
                             </div>
@@ -87,36 +88,40 @@
         </div>
         <!-- slider Area End-->
         <!-- Training categories Start -->
-        <section class="traning-categories black-bg">
+        <section class="traning-categories black-bg mt-30">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-xl-6 col-lg-6">
+                    <div data-aos="fade-up" class="col-xl-6 col-lg-6">
                         <div class="single-topic text-center mb-30">
                             <div class="topic-img">
-                                <img src="assets/img/gallery/cat1.png" alt="">
+                                <img src="assets/img/gallery/gallery4.png" style="max-height: 550px; object-fit: cover;" alt="">
                                 <div class="topic-content-box">
                                     <div class="topic-content">
                                         <h3>Personal traning</h3>
-                                        <p>Get one-on-one training sessions tailored specifically to your fitness goals. From customized workout plans to expert
-                                        guidance, achieve your desired results with undivided attention from a professional trainer.
+                                        <p>Get one-on-one training sessions tailored specifically to your fitness goals.
+                                            From customized workout plans to expert
+                                            guidance, achieve your desired results with undivided attention from a
+                                            professional trainer.
                                         </p>
-                                        <!-- <a href="courses.html" class="border-btn">View Courses</a> -->
+                                        <!-- <a href="contact.html" class="border-btn">View Courses</a> -->
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-6 col-lg-6">
+                    <div data-aos="fade-up" class="col-xl-6 col-lg-6">
                         <div class="single-topic text-center mb-30">
                             <div class="topic-img">
-                                <img src="assets/img/gallery/cat2.png" alt="">
+                                <img src="assets/img/gallery/gallery6.png" alt="">
                                 <div class="topic-content-box">
                                     <div class="topic-content">
                                         <h3>Group traning</h3>
-                                        <p>Experience the energy and motivation of group workouts. Train alongside others in a supportive environment while still
-                                        receiving expert supervision and guidance to ensure proper techniques and progress.
+                                        <p>Experience the energy and motivation of group workouts. Train alongside
+                                            others in a supportive environment while still
+                                            receiving expert supervision and guidance to ensure proper techniques and
+                                            progress.
                                         </p>
-                                        <!-- <a href="courses.html" class="btn">View Courses</a> -->
+                                        <!-- <a href="contact.html" class="btn">View Courses</a> -->
                                     </div>
                                 </div>
                             </div>
@@ -133,12 +138,12 @@
                     <div class="col-xl-12">
                         <div class="section-tittle text-center mb-55 wow fadeInUp" data-wow-duration="1s"
                             data-wow-delay=".1s">
-                            <h2>What I Offer</h2>
+                            <h2 data-aos="flip-down">What I Offer</h2>
                         </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-4 col-md-6">
+                    <div data-aos="fade-up" class="col-lg-4 col-md-6">
                         <div class="single-cat text-center mb-30 wow fadeInUp" data-wow-duration="1s"
                             data-wow-delay=".2s">
                             <div class="cat-icon">
@@ -146,11 +151,13 @@
                             </div>
                             <div class="cat-cap">
                                 <h5><a href="services.html">Body Building</a></h5>
-                                <p>Build a strong, sculpted physique with a focused bodybuilding program. Learn advanced techniques and follow a structured regimen to increase muscle definition and overall strength.</p>
+                                <p>Build a strong, sculpted physique with a focused bodybuilding program. Learn advanced
+                                    techniques and follow a structured regimen to increase muscle definition and overall
+                                    strength.</p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6">
+                    <div data-aos="fade-up" class="col-lg-4 col-md-6">
                         <div class="single-cat text-center mb-30 wow fadeInUp" data-wow-duration="1s"
                             data-wow-delay=".4s">
                             <div class="cat-icon">
@@ -158,12 +165,13 @@
                             </div>
                             <div class="cat-cap">
                                 <h5><a href="services.html">Muscle Gain</a></h5>
-                                <p>Gain lean muscle mass with science-backed training methods and nutrition plans. Perfect for those looking to bulk up and
-                                achieve a well-toned, muscular body.</p>
+                                <p>Gain lean muscle mass with science-backed training methods and nutrition plans.
+                                    Perfect for those looking to bulk up and
+                                    achieve a well-toned, muscular body.</p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6">
+                    <div data-aos="fade-up" class="col-lg-4 col-md-6">
                         <div class="single-cat text-center mb-30 wow fadeInUp" data-wow-duration="1s"
                             data-wow-delay=".6s">
                             <div class="cat-icon">
@@ -171,8 +179,10 @@
                             </div>
                             <div class="cat-cap">
                                 <h5><a href="services.html">Weight Loss</a></h5>
-                                <p>Shed unwanted pounds and achieve a healthier you with effective weight loss programs. Get a combination of fat-burning
-                                workouts and personalized diet guidance to transform your body and boost your confidence.</p>
+                                <p>Shed unwanted pounds and achieve a healthier you with effective weight loss programs.
+                                    Get a combination of fat-burning
+                                    workouts and personalized diet guidance to transform your body and boost your
+                                    confidence.</p>
                             </div>
                         </div>
                     </div>
@@ -184,40 +194,52 @@
         <div id="gallery-area" class="gallery-area section-padding30 ">
             <div class="container-fluid ">
                 <div class="row">
-                    <div class="col-xl-4 col-lg-6 col-md-6 col-sm-6">
+                    <div data-aos="zoom-in" class="col-xl-4 col-lg-6 col-md-6 col-sm-6">
                         <div class="box snake mb-30">
                             <div class="gallery-img big-img hover:blur-md"
                                 style="background-image: url(assets/img/gallery/img1.jpg);"></div>
                         </div>
                     </div>
-                    <div class="col-xl-4 col-lg-6 col-md-6 col-sm-6">
+                    <div data-aos="zoom-in" class="col-xl-4 col-lg-6 col-md-6 col-sm-6">
                         <div class="box snake mb-30">
                             <div class="gallery-img big-img"
                                 style="background-image: url(assets/img/gallery/img2.jpg);"></div>
                         </div>
                     </div>
-                    <div class="col-xl-4 col-lg-6 col-md-6 col-sm-6">
+                    <div data-aos="zoom-in" class="col-xl-4 col-lg-6 col-md-6 col-sm-6">
                         <div class="box snake mb-30">
                             <div class="gallery-img big-img"
                                 style="background-image: url(assets/img/gallery/img3.jpeg);"></div>
                         </div>
                     </div>
-                    <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6">
+                    <div data-aos="zoom-in" class="col-xl-3 col-lg-6 col-md-6 col-sm-6">
                         <div class="box snake mb-30">
                             <div class="gallery-img big-img"
                                 style="background-image: url(assets/img/gallery/img4.jpg);"></div>
                         </div>
                     </div>
-                    <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6">
+                    <div data-aos="zoom-in" class="col-xl-3 col-lg-6 col-md-6 col-sm-6">
                         <div class="box snake mb-30">
                             <div class="gallery-img big-img"
                                 style="background-image: url(assets/img/gallery/img5.jpeg);"></div>
                         </div>
                     </div>
-                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
+                    <div data-aos="zoom-in" class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
                         <div class="box snake mb-30">
                             <div class="gallery-img big-img"
                                 style="background-image: url(assets/img/gallery/img6.jpeg);"></div>
+                        </div>
+                    </div>
+                    <div data-aos="zoom-in" class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
+                        <div class="box snake mb-30">
+                            <div class="gallery-img big-img"
+                                style="background-image: url(assets/img/gallery/img101.jpg);"></div>
+                        </div>
+                    </div>
+                    <div data-aos="zoom-in" class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
+                        <div class="box snake mb-30">
+                            <div class="gallery-img big-img"
+                                style="background-image: url(assets/img/gallery/img102.jpg);"></div>
                         </div>
                     </div>
                 </div>
@@ -231,20 +253,20 @@
                     <div class="col-xl-12">
                         <div class="section-tittle text-center mb-55 wow fadeInUp" data-wow-duration="2s"
                             data-wow-delay=".1s">
-                            <h2>Pricing</h2>
+                            <h2 data-aos="zoom-out">Pricing</h2>
                         </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-4 col-md-6 col-sm-6">
+                <div data-aos="fade-up" class="col-lg-4 col-md-6 col-sm-6">
                         <div class="properties mb-30 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".2s">
                             <div class="properties__card">
                                 <div class="about-icon">
                                     <img src="assets/img/icon/price.svg" alt="">
                                 </div>
                                 <div class="properties__caption">
-                                    <span class="month">6 month</span>
-                                    <p class="mb-25">$30/m <span>(Single class)</span></p>
+                                    <span class="month">3 month</span>
+                                    <p class="mb-25">₹300/m <span>(Single class)</span></p>
                                     <div class="single-features">
                                         <div class="features-icon">
                                             <img src="assets/img/icon/check.svg" alt="">
@@ -285,12 +307,12 @@
                                             <p>Month to mouth</p>
                                         </div>
                                     </div>
-                                    <a href="#" class="border-btn border-btn2">Join Now</a>
+                                    <a href="contact.html" class="border-btn border-btn2">Join Now</a>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div data-aos="fade-up" class="col-lg-4 col-md-6 col-sm-6">
                         <div class="properties mb-30 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">
                             <div class="properties__card">
                                 <div class="about-icon">
@@ -298,7 +320,7 @@
                                 </div>
                                 <div class="properties__caption">
                                     <span class="month">6 month</span>
-                                    <p class="mb-25">$30/m <span>(Single class)</span></p>
+                                    <p class="mb-25">₹250/m <span>(Single class)</span></p>
                                     <div class="single-features">
                                         <div class="features-icon">
                                             <img src="assets/img/icon/check.svg" alt="">
@@ -339,20 +361,20 @@
                                             <p>Month to mouth</p>
                                         </div>
                                     </div>
-                                    <a href="#" class="border-btn border-btn2">Join Now</a>
+                                    <a href="contact.html" class="border-btn border-btn2">Join Now</a>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div data-aos="fade-up" class="col-lg-4 col-md-6 col-sm-6">
                         <div class="properties mb-30 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
                             <div class="properties__card">
                                 <div class="about-icon">
                                     <img src="assets/img/icon/price.svg" alt="">
                                 </div>
                                 <div class="properties__caption">
-                                    <span class="month">6 month</span>
-                                    <p class="mb-25">$30/m <span>(Single class)</span></p>
+                                    <span class="month">12 month</span>
+                                    <p class="mb-25">₹200/m <span>(Single class)</span></p>
                                     <div class="single-features">
                                         <div class="features-icon">
                                             <img src="assets/img/icon/check.svg" alt="">
@@ -393,7 +415,7 @@
                                             <p>Month to mouth</p>
                                         </div>
                                     </div>
-                                    <a href="#" class="border-btn border-btn2">Join Now</a>
+                                    <a href="contact.html" class="border-btn border-btn2">Join Now</a>
                                 </div>
                             </div>
                         </div>
@@ -407,13 +429,13 @@
             <div class="support-wrapper align-items-center">
                 <div class="right-content2">
                     <!-- img -->
-                    <div class="right-img wow fadeInUp" data-wow-duration="1s" data-wow-delay=".1s">
+                    <div data-aos="fade-in" class="right-img wow fadeInUp" data-wow-duration="1s" data-wow-delay=".1s">
                         <img src="assets/img/gallery/mypic.jpeg" width="50%" alt="Vishal's Image">
                     </div>
                 </div>
                 <div class="left-content2">
                     <!-- section tittle -->
-                    <div class="section-tittle2 mb-20 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
+                    <div data-aos="zoom-in-left" class="section-tittle2 mb-20 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                         <div class="front-text">
                             <h2 class="">About Me</h2>
                             <p>You’ll look at graphs and charts in Task One, how to approach the task and the language
@@ -424,7 +446,7 @@
                             <p class="mb-40">Task One, how to approach the task and the language needed for a successful
                                 answer. You’ll
                                 examine Task Two questions and learn how to plan, write and check academic essays.</p>
-                            <a href="courses.html" class="border-btn">Contact Me</a>
+                            <a href="contact.html" class="border-btn">Contact Me</a>
                         </div>
                     </div>
                 </div>
@@ -497,7 +519,7 @@
                     <div class="row d-flex align-items-center">
                         <div class="col-lg-12">
                             <div class="footer-copy-right text-center section-tittle">
-                                <h2 class="last-footer">Transform</h2>
+                                <h2 data-aos="fade-up" class="last-footer">Transform</h2>
                             </div>
                         </div>
                     </div>
@@ -523,6 +545,10 @@
     <!-- Jquery Plugins, main Jquery -->
     <script src="./assets/js/plugins.js"></script>
     <script src="./assets/js/main.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
